<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">售后扫码</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="collection_finish">安装完成</string>
    <string name="holes_bts">孔洞节点排布</string>
    <string name="Login">账户登陆</string>
    <string name="setup">开始安装</string>
    <string name="dispose">确认无误，下一步</string>
    <string name="todo">TODO</string>
    <string name="EquipTextView">选择安装的设备</string>
    <string name="Dispose">设备信息选择</string>
    <string name="DisposeOk">确认</string>
    <string name="map_textview">经度</string>
    <string name="map">纬度</string>
    <string name="address">地址</string>
    <string name="local">请确认位置信息无误</string>
    <string name="map_bt">确认无误，下一步</string>
    <string name="map_local">位置定位</string>
    <string name="message">信息</string>
    <string name="nb_location">位置信息：</string>
    <string name="nb_name">设备名称：</string>
    <string name="nb_id">工井ID：</string>
    <string name="photo_add">拍照+</string>
    <string name="wel_title">物联网设备安装工具</string>
    <string name="v2_0">V2.0</string>
    <string name="nb_close">关闭</string>
    <string name="nb_tips">当前页面有未录入项，请录入信息后重试。</string>
    <string name="well_text">设备信息录入</string>
    <string name="add_scancode">添加节点设备</string>
    <string name="setName">设备名称：</string>
    <string name="logout_exit">退出账户</string>
    <string name="loginout_title">账户信息</string>
    <string name="ground_nail_bt">继续安装</string>
    <string name="ground_nail_close">关闭</string>
    <string name="success">安装完成</string>
    <string name="successful">安装完成</string>
    <string name="successful_local">位置信息：</string>
    <string name="successful_name">设备名称：</string>
    <string name="successful_banzu">所属班组：</string>
    <string name="successful_scence">安装场景：</string>
    <string name="successful_photo">现场照片：</string>
    <string name="finish_tips">如要继续安装该产品，请点继续安装。 否则返回选择其他产品。</string>
    <string name="successful_goon">继续安装</string>
    <string name="finish_return">返回</string>
    <string name="bt_cx">重新发送请求</string>
    <string name="gosuccess">继续安装</string>
    <string name="login_tips">如遇提示账户无法登陆， 请确认账号及密码。若需要帮助，请联系售后。</string>
    <string name="login_account">登录账户</string>
    <string name="outerWell">外井盖类型</string>
    <string name="pedestal">基座类型</string>
    <string name="lock">锁具</string>
    <string name="nb">NB</string>
    <string name="banzu">所属班组</string>
    <string name="scence">安装场景</string>
    <string name="ew">安装失败</string>
    <string name="sdasd">安装完成</string>
    <string name="rec">重新发送请求</string>
    <string name="returngoto">返回继续安装</string>
    <string name="lostt">无法连接到服务器</string>
    <string name="shengnue">...</string>
    <string name="retur">返回</string>
</resources>