<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        android:orientation="vertical"
        tools:context=".activity.FailActivity">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="70"
            android:background="#ffffffff"
            tools:ignore="Suspicious0dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/sdasd"
                android:textColor="#ff000000"
                android:textSize="18sp"
                android:textStyle="bold" />
        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="400"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@mipmap/fail"
                android:layout_margin="30dp"
                android:contentDescription="@string/todo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ew"
                android:textSize="28sp"
                android:textStyle="bold"
                android:textColor="#ff2f8ece"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/shengnue"
                android:textSize="50sp"
                android:textColor="#ff2f8ece" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lostt"
                android:textSize="14sp"
                android:textStyle="bold"
                android:textColor="#ff2f8ece" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="150"
            android:gravity="top"
            android:orientation="vertical">

            <Button
                android:id="@+id/come_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/collection_bt"
                android:text="@string/rec"
                android:textColor="#ffffffff"
                android:textSize="14sp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">
                <Button
                    android:id="@+id/return_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/no_setout"
                    android:text="@string/returngoto"
                    android:textColor="#ffffffff"
                    android:textSize="14sp"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp"/>
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</layout>