<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/message_dialog">

    <TextView
        android:id="@+id/ground_nail_title"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:gravity="center"
        android:text="@string/message"
        android:textColor="#ff0099ff"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/ground_nail_content"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:gravity="center|top"
        android:padding="20dp"
        android:text="@string/nb_tips"
        android:textColor="#ff000000"
        android:textSize="14sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/proceed_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:background="@drawable/nb_dialog"
                android:text="@string/ground_nail_bt"
                android:textColor="#ffffffff" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/close_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:background="@drawable/nb_dialog"
                android:text="@string/ground_nail_close"
                android:textColor="#ffffffff" />

        </LinearLayout>

    </LinearLayout>



</LinearLayout>