<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        android:orientation="vertical"
        tools:context=".activity.WellSuccessActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!--        标题-->
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="80dp"
                tools:ignore="Suspicious0dp,UselessParent">
                <!--        设备信息录入-->
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/successful"
                    android:textColor="#ff000000"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </FrameLayout>

            <!--   RecyclerView -->
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_exhibition"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:ignore="MissingConstraints" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="50dp"
                android:text="@string/successful_photo"
                android:textColor="#ff000000"
                android:textSize="14sp" />


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_graph"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="50dp" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_marginStart="80dp"
                android:layout_marginEnd="80dp"
                android:gravity="center"
                android:text="@string/finish_tips"
                android:textColor="#ff2f8ece"
                android:textSize="12sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:gravity="center"
                android:orientation="vertical">

                <Button
                    android:id="@+id/come_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp"
                    android:background="@drawable/collection_bt"
                    android:text="@string/gosuccess"
                    android:textColor="#ffffffff"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginTop="40dp"
                android:gravity="center">

                <Button
                    android:id="@+id/return_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp"
                    android:background="@drawable/no_setout"
                    android:text="@string/retur"
                    android:textColor="#ffffffff"
                    android:textSize="14sp" />
            </LinearLayout>


        </LinearLayout>

    </ScrollView>
</layout>
