<?xml version="1.0" encoding="utf-8"?><!--消息界面弹窗效果-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="280dp"
    android:background="@drawable/message_dialog"
    android:orientation="vertical"
    tools:ignore="UselessParent">

    <TextView
        android:id="@+id/dialog_text"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:gravity="center"
        android:text="@string/message"
        android:textColor="#ff0099ff"
        android:textSize="16sp"
        android:textStyle="bold" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:orientation="vertical">

        <com.wx.wheelview.widget.WheelView
            android:id="@+id/withinBounds"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|left"
            android:layout_marginLeft="50dp"
            android:background="@mipmap/dispose_right"
            android:contentDescription="@string/todo"
            tools:ignore="RtlHardcoded" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|right"
            android:layout_marginRight="50dp"
            android:background="@mipmap/dispose_left"
            android:contentDescription="@string/todo"
            tools:ignore="RtlHardcoded" />
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:gravity="center">

        <Button
            android:id="@+id/dialog_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:background="@drawable/dispose_check"
            android:text="@string/DisposeOk"
            android:textColor="#ffffffff"
            android:textSize="16sp" />

    </LinearLayout>


</LinearLayout>