<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#ffffffff"
        android:fitsSystemWindows="true"
        android:orientation="vertical"
        tools:context=".activity.MapActivity">

        <!--        35-->
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="35">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/message_top_bar"
                android:gravity="center"
                android:text="@string/map_local"
                android:textColor="#ff000000"
                android:textSize="18sp"
                android:textStyle="bold" />

            <ImageButton
                android:id="@+id/image_icon_return"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|left"
                android:layout_marginStart="30dp"
                android:background="@mipmap/dispose_return"
                android:contentDescription="@string/todo"
                tools:ignore="RtlHardcoded" />

        </FrameLayout>

        <!--        113-->
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="113">

            <com.amap.api.maps.MapView
                android:id="@+id/map"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <ImageButton
                android:id="@+id/point"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|bottom"
                android:layout_margin="10dp"
                android:background="@mipmap/anchor_point"
                android:contentDescription="@string/todo" />

        </FrameLayout>

        <!--        113-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="113"
            android:gravity="center|top"
            android:orientation="vertical">
            <!--    信息记录、跳转布局-->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="30dp"
                android:layout_weight="1"
                android:gravity="center|left"
                android:orientation="horizontal"
                tools:ignore="NestedWeights,RtlHardcoded">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/map_textview"
                    android:textColor="#ffc6c6c6"
                    android:textSize="14sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginRight="50dp"
                    android:background="@drawable/map__bar"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/longitude"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="25dp"
                        android:layout_marginTop="1dp"
                        android:layout_marginRight="25dp"
                        android:layout_marginBottom="1dp"
                        android:background="@null"
                        android:textColor="#ff000000"
                        android:textSize="14sp" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="15dp"
                android:layout_weight="1"
                android:gravity="center|left"
                android:orientation="horizontal"
                tools:ignore="RtlHardcoded">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/map"
                    android:textColor="#ffc6c6c6"
                    android:textSize="14sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginRight="50dp"
                    android:background="@drawable/map__bar"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/latitude"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="25dp"
                        android:layout_marginTop="1dp"
                        android:layout_marginRight="25dp"
                        android:layout_marginBottom="1dp"
                        android:background="@null"
                        android:textColor="#ff000000"
                        android:textSize="14sp" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="15dp"
                android:layout_weight="1"
                android:gravity="center|left"
                android:orientation="horizontal"
                tools:ignore="RtlHardcoded">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/address"
                    android:textColor="#ffc6c6c6"
                    android:textSize="14sp" />


                <TextView
                    android:id="@+id/address"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginRight="50dp"
                    android:background="@drawable/map__bar"
                    android:gravity="center"
                    android:scrollbars="vertical"
                    android:textColor="#ff000000"
                    android:textSize="14sp" />

            </LinearLayout>

        </LinearLayout>

        <!--        20dp+12sp-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/local"
            android:textColor="#ffc6c6c6"
            android:textSize="12sp" />

        <!--        54-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="54"
            android:gravity="center">

            <Button
                android:id="@+id/button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:background="@drawable/dispose_check"
                android:text="@string/map_bt"
                android:textColor="#ffffffff"
                android:textSize="14sp" />
        </LinearLayout>
    </LinearLayout>
</layout>
