<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!--        设备信息录入-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginBottom="24dp"
            android:background="@drawable/message_top_bar"
            android:gravity="center"
            android:text="@string/well_text"
            android:textColor="#ff000000"
            android:textSize="18sp"
            android:textStyle="bold" />

        <!--        位置信息-->
        <LinearLayout
            android:id="@+id/local_layout"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginLeft="28dp"
            android:layout_marginRight="28dp"
            android:layout_marginBottom="24dp"
            android:background="@drawable/lock_ok"
            android:orientation="horizontal"
            android:textColor="#ffb4b4b4">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginTop="8dp"
                android:layout_weight="207"
                android:text="@string/nb_location"
                android:textColor="#ffb4b4b4"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/local_exit_text"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginTop="8dp"
                android:layout_weight="450"
                android:background="@null"
                android:gravity="top|left"
                android:textColor="#ffb4b4b4"
                android:textSize="14sp"
                tools:ignore="RtlHardcoded" />
        </LinearLayout>

        <!--        设备名称-->
        <LinearLayout
            android:id="@+id/name_layout"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginLeft="28dp"
            android:layout_marginRight="28dp"
            android:layout_marginBottom="24dp"
            android:background="@drawable/lock_ok"
            android:orientation="horizontal"
            android:textColor="#ffb4b4b4">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginTop="8dp"
                android:layout_weight="207"
                android:text="@string/nb_name"
                android:textColor="#ffb4b4b4"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/name_text"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginTop="8dp"
                android:layout_weight="450"
                android:background="@null"
                android:gravity="top|left"
                android:textColor="#ff000000"
                android:textSize="14sp"
                tools:ignore="RtlHardcoded" />
        </LinearLayout>

        <!--        工井ID-->
        <LinearLayout
            android:id="@+id/id_layout"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginLeft="28dp"
            android:layout_marginRight="28dp"
            android:layout_marginBottom="24dp"
            android:background="@drawable/lock_ok"
            android:orientation="horizontal"
            android:textColor="#ffb4b4b4">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginTop="8dp"
                android:layout_weight="207"
                android:text="@string/nb_id"
                android:textColor="#ffb4b4b4"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/id_text"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginTop="8dp"
                android:layout_weight="450"
                android:background="@null"
                android:gravity="top|left"
                android:textColor="#ff000000"
                android:textSize="14sp"
                android:autofillHints="请工作人员手动输入"
                android:inputType="numberSigned"
                tools:ignore="LabelFor,RtlHardcoded"/>
        </LinearLayout>

    </LinearLayout>
</layout>